--- a/charts/rabbitmq-cluster/Chart.yaml
+++ b/charts/rabbitmq-cluster/Chart.yaml
@@ -4,13 +4,12 @@ name: rabbitmq-cluster
 description: Helm chart to define a RabbitMQ cluster via official rabbitmq.com CRDs (RabbitmqCluster).
 type: application
 version: "2.4.4"
-appVersion: "4.2-management"
+appVersion: "4.2"
 kubeVersion: ">= 1.33.0-0"
 home: https://www.rabbitmq.com/kubernetes/operator/operator-overview.html
 sources:
   - https://github.com/CloudPirates-io/helm-charts/tree/main/charts/rabbitmq-cluster-operator
 keywords:
-  - cloudpirates
   - rabbitmq
   - operator
   - crd
@@ -19,4 +18,8 @@ keywords:
 dependencies:
   - name: klicktipp-common
     version: 1.0.0
-    repository: "https://klicktipp.github.io/helm-charts/"
+    repository: "file://../klicktipp-common"
+  - name: rabbitmq-topology
+    version: "1.0.0"
+    repository: "file://../rabbitmq-topology"
+    condition: rabbitmq-topology.enabled
